feat: deliver next high-value RAG operations